--- a/templates/thermostat.html
+++ b/templates/thermostat.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
 <html>
 <head>
 <title>Thermostat</title>
